// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add and remove attribute 1`] = `
"export default function Foo() {
    return <View name={\\"hello\\"}></View>;
}
"
`;

exports[`add and remove attribute 2`] = `
"export default function Foo() {
    return <View></View>;
}
"
`;

exports[`add element 1`] = `
"export default function Foo() {
    return <View><Text></Text></View>;
}
"
`;

exports[`add element 2`] = `
"export default function Foo() {
    return <View><Text></Text><Image></Image></View>;
}
"
`;

exports[`duplicate element 1`] = `
"export default function Foo() {
    return <View><Text></Text><Text></Text><Image></Image></View>;
}
"
`;

exports[`gets component layer 1`] = `
Object {
  "element": Object {
    "attributes": Object {},
    "children": Array [],
    "indexPath": Array [
      0,
      3,
      0,
      0,
    ],
    "tagName": "View",
  },
  "name": "Foo",
}
`;

exports[`gets component layer with attributes 1`] = `
Object {
  "element": Object {
    "attributes": Object {
      "name": Object {
        "type": "stringLiteral",
        "value": "test",
      },
    },
    "children": Array [],
    "indexPath": Array [
      0,
      3,
      0,
      0,
    ],
    "tagName": "View",
  },
  "name": "Foo",
}
`;

exports[`move element above 1`] = `
"export default function Foo() {
    return <View><Image></Image><Text></Text><Button></Button></View>;
}
"
`;

exports[`move element above 2`] = `
"export default function Foo() {
    return <View><Image></Image><Text></Text><Button></Button></View>;
}
"
`;

exports[`move element below 1`] = `
"export default function Foo() {
    return <View><Image></Image><Button></Button><Text></Text></View>;
}
"
`;

exports[`move element below 2`] = `
"export default function Foo() {
    return <View><Text></Text><Button></Button><Image></Image></View>;
}
"
`;

exports[`move element inside 1`] = `
"export default function Foo() {
    return <View><Text><Image></Image></Text></View>;
}
"
`;

exports[`move element inside 2`] = `
"export default function Foo() {
    return <View><Image><Text></Text></Image></View>;
}
"
`;

exports[`remove element 1`] = `
"export default function Foo() {
    return <View><Text></Text></View>;
}
"
`;

exports[`remove element 2`] = `
"export default function Foo() {
    return <View></View>;
}
"
`;

exports[`set element name 1`] = `
"export default function Foo() {
    return <View name={\\"hello\\"}></View>;
}
"
`;

exports[`visits 1`] = `
"export default function Bar() {
    return <View></View>;
}
"
`;
